--- a/.gitignore
+++ b/.gitignore
@@ -85,23 +85,26 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 
-### Xcode ###
-# Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
 ## Build generated
+build/
+DerivedData
 
 ## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
 
 ## Other
-
-### Xcode Patch ###
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
+*.xccheckout
+*.moved-aside
+*.xcuserstate
+*.xcscmblueprint
 
 
 # End of file
